lcs-desktop (2.4.8~7) Lcs; urgency=low

  * Fix bug in the homepage Offline 

 -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Fri, 06 May 2011 04:00:22 +0200

lcs-desktop (2.4.8~6) Lcs; urgency=low

  [ Dominique Lepaisant ]
  * Fix bug on smbwebclient on bar-top menus
  * Fix bug on icon place 

  [ Dominique Lepaisant ]
  * Prepares version 2.4.8~5
  * Fix bug when user has lcs_is_admin right
  * Fix bug on smbwebclient in admin menu
  * Add icon for smbwebclient
  * Fix bug on new icon smbwebclent
  * Fix bug with maintinfo in core/action/load_settings.php
  * Fix bugs in the display of infos user
  * Add icon appli bcdiweb
  * Add icon annu for 'other' groups  
  * Modify style of bar-top right
  * Add tips styles for icons in bar-top right
  * Add tips styles for links in user infos
  * Comment console log
  * Add icon admins 
  * Fix the icons position relative to the document

  [ Dominique Lepaisant ]
  * Prepares version 2.4.8~4
  * Fix bug with the width of windows when the iframe is loaded
  * Removing the import button in the user prefs if the user is in group "Student " 
  * Modify core/js/jquery.desktop.js, core/includes/inc-bars_topbottom.php, core/includes/inc-user_infos.php for roundcube
  * Modify core/includes/inc-finder.php for elfinder

  [ Dominique Lepaisant ]
  * Prepares version 2.4.8~3
  * Changing the procedure for creating the desktop (overwrite the file jquery.desktop.js)
  * Changing the management of CSF parameters and user preferences (xml to json)
  * Added the admin preferences
  * Recording the position of icons in the user preferences
  * Added icons for apps chistelised (he probably missing)
  * Adding context menu
  * Adding the language management (testing)
  * Adding navigation buttons in the top bar of windows
  * Adding a field "web browsing" in the dropdown menu
  * Removing unnecessary images
  * Fix bug on setting wallpaper
  ° Admin can add and manage shared links